# ether

./: LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: api-tests.yml  ci.yml  release.yml
design-system/: DESIGN_REVIEW.md  MASTER.md
design-system/brand/: BRAND.md  dmg-bg.html  icon-render.html
design-system/preview/: index.html  mock-graphql.html  mock-request.html  style.css
docs/architecture/: autocomplete.md  cli-lok.md  collections-env-secrets.md  devutils.md  gql-subscriptions.md  graphql-explorer.md  history-diff.md  local-ai.md  palette-import-polish.md  quickjs-scripts.md  rebrand-i18n.md  request-workbench.md  testing.md  workflow-editor.md
docs/design/: ux-audit-r1.md  ux-foundation.md  ux-review-r2.md
docs/design/audit-2026-07-13/: UX_OVERHAUL_SPEC.md
docs/research/: 2026-07-12-feature-research-postman-insomnia.json  2026-07-12-power-features-curator.json
docs/specs/: 2026-07-12-lokowka-design.md
docs/status/: packaging.json
docs/status/core/: engine.json  interp.json  shell.json  store.json
docs/status/wave2/: curlgen.json  importers.json  resolve.json
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  assert.rs  cli.rs  curlgen.rs  engine.rs  files.rs  importers.rs  interp.rs  json_path.rs  lib.rs  main.rs  mcp.rs  models.rs  report.rs  resolve.rs  scripts.rs  secrets.rs  sigv4.rs  store.rs  subscriptions.rs  workflow.rs
src-tauri/tests/: engine_http.rs  lok_e2e.rs
src/components/: AppShell.test.tsx  AppShell.tsx
src/components/common/: EmptyState.tsx  HealthDot.tsx  Icon.tsx  IconSprite.tsx  MethodBadge.tsx  ResizeHandle.tsx  SingleLineCodeInput.test.tsx  SingleLineCodeInput.tsx  TabBar.tsx  Toast.tsx  kv-grid.css  resize-handle.css  toast.css
src/components/devtools/: BenchmarkButton.tsx  BenchmarkLauncher.tsx  BenchmarkPanel.test.tsx  BenchmarkPanel.tsx  BenchmarkProgress.tsx  BenchmarkStats.tsx  CertCard.tsx  CertPanel.tsx  DevToolsDrawer.tsx  DevToolsDrawerHeader.tsx  JwtClaimsView.test.tsx  JwtClaimsView.tsx  JwtCountdown.tsx  JwtPanel.tsx  JwtPasteDecoder.tsx  JwtSourcePicker.tsx  LatencyHistogram.test.tsx  LatencyHistogram.tsx  TlsSummary.test.tsx  TlsSummary.tsx  devtools.css
src/components/editor/: RequestEditor.tsx  RequestToolbar.tsx  SendButton.tsx
src/components/env/: ConfirmDialog.tsx  EnvEditor.tsx  EnvList.tsx  EnvMeta.tsx  EnvVariablesTable.tsx  EnvironmentManager.test.tsx  EnvironmentManager.tsx  SecretNamesList.test.tsx  SecretNamesList.tsx  SecretStatusBadge.tsx  SetSecretDialog.tsx  VariablesTable.tsx  env.css
src/components/graphql/: ConnStatusBadge.tsx  DocsBreadcrumb.tsx  DocsExplorer.tsx  DocsTypePanel.tsx  ExplorerStatusBar.tsx  ExplorerToolbar.tsx  FieldTree.tsx  FieldTreeNode.tsx  GraphqlDoubleToolbar.test.tsx  GraphqlExplorer.test.tsx  GraphqlExplorer.tsx  HeadersPanel.tsx  OperationPicker.tsx  OperationSections.tsx  OperationVarsPanel.tsx  QueryEditor.tsx  RefreshSchemaButton.tsx  RequestTypeToggle.tsx  RunButton.tsx  SdlFallbackPanel.tsx  StreamEventList.tsx  StreamEventRow.tsx  StreamStatusBar.tsx  SubscribeButton.tsx  SubscriptionStream.test.tsx  SubscriptionStream.tsx  VariablesPanel.tsx  graphql.css
src/components/history/: CompareBar.tsx  DiffHeader.tsx  DiffPanel.tsx  DiffTabs.tsx  HeadersDiffView.tsx  HistoryDrawer.tsx  HistoryDrawerHeader.tsx  HistoryFilterBar.tsx  HistoryList.test.tsx  HistoryList.tsx  HistoryRow.tsx  HistoryRowMeta.tsx  HistoryScopeToggle.tsx  JsonDiffView.test.tsx  JsonDiffView.tsx  TimingDiffView.tsx  (+2 more)
src/hooks/: useAiAction.ts  useBenchmark.test.ts  useBenchmark.ts  useCopyAsCurl.test.ts  useCopyAsCurl.ts  useCurlPreview.ts  useDocsNav.ts  useDragResize.ts  useEnvManager.ts  useEnvPill.ts  useFieldTreeExpansion.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useGraphqlBuilder.ts  useGraphqlSchema.test.ts  useGraphqlSchema.ts  useHistoryReplay.test.ts  useHistoryReplay.ts  useImport.ts  useJwtCountdown.test.ts  useJwtCountdown.ts  useModeHotkeys.ts  useNewRequest.ts  useNodeStatus.ts  usePaletteHotkey.ts  useRequestDraft.test.ts  useRequestDraft.ts  useRequestDraftGraphql.test.ts  useSecrets.ts  useSendRequest.test.ts  useSendRequest.ts  useShellBootstrap.ts  useSidebarDnD.ts  useSidebarTree.ts  useSubscription.test.ts  useSubscription.ts  useToolbarOverflow.ts  useVariableCandidates.ts  useWatchMode.test.ts  useWatchMode.ts  (+5 more)
src/i18n/: en.ts  index.ts  interpolate.test.ts  interpolate.ts  pl.ts  rebrand.test.ts  useT.test.ts  useT.ts
src/lib/: assertionDefaults.ts  assertions.test.ts  assertions.ts  auth.ts  bodyMode.ts  certParse.test.ts  certParse.ts  clipboard.ts  collectionTree.test.ts  collectionTree.ts  dirty.test.ts  dirty.ts  envMerge.test.ts  envMerge.ts  envUsage.test.ts  envUsage.ts  format.test.ts  format.ts  graphqlBody.test.ts  graphqlBody.ts  graphqlIntrospection.test.ts  graphqlIntrospection.ts  graphqlRun.test.ts  graphqlSchemaTree.ts  graphqlSelection.test.ts  graphqlSelection.ts  histogram.test.ts  histogram.ts  historyFilter.test.ts  historyFilter.ts  htmlDetect.test.ts  htmlDetect.ts  httpStatus.test.ts  httpStatus.ts  ids.ts  importFormat.test.ts  importFormat.ts  ipc.ts  jsonDiff.test.ts  jsonDiff.ts  (+32 more)
src/state/: useCollectionsStore.test.ts  useCollectionsStore.ts  useEnvStore.test.ts  useEnvStore.ts  useHistoryStore.test.ts  useHistoryStore.ts  useSnapshotStore.test.ts  useSnapshotStore.ts  useToast.ts  useUiStore.test.ts  useUiStore.ts  useWorkbenchActions.ts
src/styles/: base.css  completion.css  primitives.css  tailwind.css  tokens.css
src/test/: setup.ts  smoke.test.ts
(+139 files in other folders)
