[package]
name = "lokowka"
version = "0.1.0"
description = "Ether — a fully local API client for macOS with curl under the hood"
authors = ["Jakub Bryndal"]
edition = "2021"

[lib]
name = "lokowka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
curl = { version = "0.4", features = ["http2"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2"
dirs = "5"
shell-words = "1"
# WebSocket transport for GraphQL subscriptions (graphql-transport-ws protocol).
# `rustls-tls-native-roots` reuses the system trust store without linking
# OpenSSL — consistent with the engine's certificate verification behaviour.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
# tokio itself ships transitively via tauri, but only with `sync`/`rt`; the
# subscription task needs a graceful stop channel (`sync`) and an ack timeout
# (`time`). We spawn through `tauri::async_runtime`, not a second runtime.
tokio = { version = "1", features = ["sync", "time", "macros"] }

[dev-dependencies]
# The subscription tests spin a real loopback WS server: `net` to bind/accept,
# `macros`+`rt-multi-thread` for `#[tokio::test]`.
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread", "sync", "time", "io-util"] }
futures-util = "0.3"
